src/objects/Low_Ink__e.object
<CustomObject>
    <fields>
        <fullName>Ink_Percentage__c</fullName>
        <label>Ink Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Printer_Model__c</fullName>
        <label>Printer Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Low Ink</label>
    <pluralLabel>Low Inks</pluralLabel>
</CustomObject>